Added DB structure and connection

--- a/Conference.Api/appsettings.Development.json
+++ b/Conference.Api/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+    "ConnectionStrings": {
+      "DefaultConnection" : "server=.,2433;Database=ConferenceRooms;User Id=sa;Password=P@ssw0rd;Encrypt=False;"
+    }
 }
